--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -6,6 +6,7 @@
 @import "./fonts.css";
 @import "./layout.css";
 @import "./borders.css";
+@import "./animations.css";
 @import "./shame.css";
 
 :root {
